feat: added get txn API with updated swagger docs
